Fix menu z-index in mobile

--- a/app/javascripts/components/About/styles.css
+++ b/app/javascripts/components/About/styles.css
@@ -49,7 +49,6 @@
 
 .button {
   background-color: #FFF;
-  z-index: 10;
   height: 46px;
   padding: 11px 46px 13px 47px;
   border: 2px solid #000000;
