--- a/app/javascripts/components/AppBar/styles.css
+++ b/app/javascripts/components/AppBar/styles.css
@@ -8,6 +8,7 @@
   display: flex;
   opacity: 0.94;
   box-shadow: 0px -1px 4px 0px rgba(0,0,0,0.50);
+  z-index: 50;
 }
 
 .ham {
